# SuperWater

./: .gitignore  LICENSE  README.md  environment.yml  evaluate_test2.py  evaluate_water_pos.ipynb  inference_water_pos.py  organize_pdb_dataset.py  pyproject.toml  requirements-pyg-cu118.txt  requirements.txt  train.py  validation_recall_precision.py  visualization_diffusion_main.py
apps/webapp/: app.py
apps/webapp/templates/: index.html  inference.html
confidence/: confidence_train.py  dataset.py
data/splits/: protein_complex_test.txt  protein_protein_test.txt  single_protein_test.txt
data/waterbind/5SRF/: 5SRF_water.mol2
datasets/: esm_embedding_preparation_water.py  pdbbind.py  pdbbind_lm_embedding_preparation.py  pdbid_info_res_names.txt  process_mols.py  reduced_dataset.py
examples/configs/: predict_5srf.yaml
examples/data/splits/: test_res15.txt  train_res15.txt  (+1 more)
logs/: inference_log_rr1.txt  inference_log_rr10.txt  inference_log_rr15.txt  inference_log_rr5.txt  processing_log_rr1.txt  processing_log_rr10.txt  processing_log_rr15.txt  processing_log_rr5.txt
models/: all_atom_score_model.py  score_model.py
models/water_confidence_res15_sigmoid/: model_parameters.yml
models/water_score_res15/: model_parameters.yml
scripts/: check_gpu.py  install.sh
src/superwater/: __init__.py  embed.py  esm_embeddings.py  inference.py  organize_dataset.py  paths.py  predict.py  structure_io.py  train.py
tests/: test_cli_output.py  test_cluster_centroid.py  test_diffusion_utils.py  test_imports.py  test_io.py  test_nearest_point_dist.py  test_organize_dataset.py  test_parsing.py  test_predict.py  test_structure_io.py
utils/: cluster_centroid.py  diffusion_utils.py  find_water_pos.py  inference_utils.py  min_dist.py  nearest_point_dist.py  parsing.py  sampling.py  training.py  utils.py  visualise.py
webapp/: app.py
webapp/templates/: index.html  inference.html
(+18 files in other folders)
